Raise java version to 17