@@ -909,7 +909,6 @@ public class TownyEntityListener implements Listener {
 		map.put("damage_resistance", "resistance");
 	});
 
-	@SuppressWarnings("SimplifyStreamApiCallChains")
 	private boolean hasDetrimentalEffects(Collection<PotionEffect> effects) {
 		if (effects.isEmpty())
 			return false;
@@ -917,7 +916,7 @@ public class TownyEntityListener implements Listener {
 		/*
 		 * List of potion effects blocked from PvP.
 		 */
-		final List<String> detrimentalPotions = TownySettings.getPotionTypes().stream().map(type -> type.toLowerCase(Locale.ROOT)).collect(Collectors.toList());
+		final List<String> detrimentalPotions = TownySettings.getPotionTypes().stream().map(type -> type.toLowerCase(Locale.ROOT)).toList();
 
 		return effects.stream()
 			.map(effect -> BukkitTools.potionEffectName(effect.getType()))
